--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.young</groupId>
+    <groupId>com.shimi</groupId>
     <artifactId>rate-limiter-spring-boot-starter</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
     <name>rate-limiter-spring-boot-starter</name>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.young</groupId>
+            <groupId>com.shimi</groupId>
             <artifactId>rate-limiter-autoconfigure</artifactId>
-            <version>0.0.1</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
