feat: switch to  gradle

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+.gradle 
+
 ### STS ###
 .apt_generated
 .classpath
@@ -30,3 +32,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
