--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 dependencies {
-  //这里为方便测试，我们工程下面的依赖，而不是 maven center的依赖
+    //这里为方便测试，我们工程下面的依赖，而不是 maven center的依赖
     implementation project(":rate-limiter-autoconfigure")
 //    implementation 'com.young:rate-limiter-autoconfigure:1.0.1'
 }
@@ -28,6 +28,17 @@ publishing {
     publications {
         library(MavenPublication) {
             from components.java
+        }
+    }
+//如果是发布到本地
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/octocat/hello-world"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
         }
     }
 }
