feat:support jdk

--- a/rate-limiter-autoconfigure/build.gradle
+++ b/rate-limiter-autoconfigure/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'java'
     id 'maven-publish'
-    id 'org.springframework.boot' version '3.0.4' apply false
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '2.7.12' apply false
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.young'
 version = '0.0.1'
 description = 'rate-limiter-autoconfigure'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 configurations {
     compileOnly {
@@ -25,8 +25,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.12'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.7.12'
 }
 
 
