--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,15 @@
     <artifactId>rate-limiter-spring-boot-starter</artifactId>
     <version>0.0.1</version>
     <name>rate-limiter-spring-boot-starter</name>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.young</groupId>
-            <artifactId>rate-limiter-autoconfigure</artifactId>
-            <version>0.0.1</version>
-        </dependency>
-    </dependencies>
-
-    <repositories>
-      <repository>
-          <id>jitpack.io</id>
-          <url>https://jitpack.io</url>
-      </repository>
-  </repositories>
+    <modules>
+        <module>rate-limiter-autoconfigure</module>
+    </modules>
 
 </project>
