--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,3 +3,5 @@ jdk:
 before_install:
   - sdk install java 17.0.1-open
   - sdk use java 17.0.1-open
+  - sdk install maven 3.9.8
+  - sdk use maven 3.9.8
